[tool.poetry]
name = "actuonix_lac"
version = "0.1.1"
description = "Python module for controlling an Actuonix/Firgelli Linear Actuator Control Board"
authors = ["Jerimiah Daley", "Richard Emile Sarkis <rich@sark.is>"]
repository = "https://github.com/DamnedFacts/actuonix-lac"
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^2.7 || ^3.5"
pyusb = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
bump2version = { version="^0.5.11", python = "^3.5" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
